Add interactive programming challenge game with user choices and path visualization

--- a/Dia2/index.html
+++ b/Dia2/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<button onclick="startChallenge()">Iniciar Desafío</button>
-
-<script src="Dia # 2/Dia#2.js"></script>
+    <div class="container">
+        <h1>Desafío de Programación</h1>
+        <button>Iniciar Desafío</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
