Add exit button functionality to the number guessing game

--- a/Dia4/index.html
+++ b/Dia4/index.html
@@ -33,8 +33,14 @@
             </div>
 
             <div class="restart-container">
-                <button id="restart-btn" class="btn btn-restart">Jugar de nuevo</button>
-                <button id="switch-mode-btn" class="btn btn-switch">Cambiar a número aleatorio</button>
+                <div class="restart-buttons">
+                    <button id="restart-btn" class="btn btn-restart">Jugar de nuevo</button>
+                    <button id="switch-mode-btn" class="btn btn-switch">Cambiar a número aleatorio</button>
+                </div>
+            </div>
+
+            <div class="exit-container">
+                <button id="exit-btn" class="btn btn-exit">Salir</button>
             </div>
         </div>
     </div>
